Adicionado preview do conteúdo HTML

--- a/docs/todo_2020-03-30.md
+++ b/docs/todo_2020-03-30.md
@@ -21,7 +21,9 @@ Os diretórios de protótipos de frontend estão confusos, não dá pra saber o 
     - Pages
       - Tela<nome da tela/função>.js: somente um arquivo JS para definir a tela e todos seus subcomponentes; cada tela deve exportar seu elemento mais externo com um id="tela<NomeTela>" para permitir estilizações não conflitantes por tela 
 
-O resultado da reorganização pode ser visto [aqui](./reorganizacao_front.html) 
+O resultado da reorganização pode ser visto [aqui](./reorganizacao_front.html)
+ 
+[Ver pelo GitHub](https://htmlpreview.github.io/?https://github.com/murilothink/comanda-blue/blob/master/docs/reorganizacao_front.html)
 
 **NOTA**
 Todos arquivos de documentação devem ser colocados na pasta `docs`. A recomendação é criar um arquivo por fluxo de negócio no seguinte formato
