Adicionado revisão de fluxo

--- a/docs/todo_2020-03-30.md
+++ b/docs/todo_2020-03-30.md
@@ -2,14 +2,14 @@
 
 Pessoal segue planejamento de atividades que precisamos fazer para concluir nossa aplicação
 
-  - Organizar projeto Frontend e integrar ele com a aplicação Java
-  - Finalizar APIs
-  - Implementar testes unitários nas APIs
-  - Fazer tela de Extrato
-  - Fazer tela de pagamento
+  1. Organizar projeto Frontend e integrar ele com a aplicação Java
+  2. Revisar fluxo
+  3. Implementar testes unitários nas APIs
+  4. Fazer tela de Extrato
+  5. Fazer tela de pagamento
 
 
-## Organizar Frontend
+## (1) Organizar Frontend
 
 Os diretórios de protótipos de frontend estão confusos, não dá pra saber o que faz parte de aplicação e o que pode ser jogado fora. Além disso precisamos que estes arquivos façam parte do projeto Java e consumam a API do projeto.
 
@@ -22,7 +22,7 @@ Os diretórios de protótipos de frontend estão confusos, não dá pra saber o 
       - Tela<nome da tela/função>.js: somente um arquivo JS para definir a tela e todos seus subcomponentes; cada tela deve exportar seu elemento mais externo com um id="tela<NomeTela>" para permitir estilizações não conflitantes por tela 
 
 O resultado da reorganização pode ser visto [aqui](./reorganizacao_front.html)
- 
+
 [Ver pelo GitHub](https://htmlpreview.github.io/?https://github.com/murilothink/comanda-blue/blob/master/docs/reorganizacao_front.html)
 
 **NOTA**
@@ -96,3 +96,23 @@ A idéia é fazer o componente App renderizar o Header e o Footer, além do rote
     color: red;  /* isto torna todo link dentro da tela login vermelho */
 }
 ```
+
+------------------------------------------
+## (2) Revisar fluxo
+
+1: **Autenticar usuário**
+Validar usuário contra o servidor e salvar email do usuário no contexto da aplicação
+
+2: **Abrir/participar de uma mesa**
+Abrir/entrar comanda, nesta tela temos duas opções ou deixamos o estabelecimento _fixo_ ou utilizamos um código pré-definido de mesa que ao validar o PIN recebemos os dados da mesa. Nesta segunda opção precisamos pegar o ID do estabelecimento e da mesa para fazer o processo de abertura de comanda.
+Na primeira opção precisamos saber o número da mesa para poder fazer a abertura da comanda.
+Ao abrir a comanda os dados da comanda deve ser passado como state da aplicação (App).
+
+3: **Cardapio**
+Ao carregar a tela os dados do estabelecimento devem ser exibidos, e os dados de produtos devem ser carregados do servidor.
+Cada novo pedido confirmado deve enviar um pedido para o servidor via ComandaController.fazerPedido
+
+4: **Extrato**
+Carrega a tela com todos os pedidos. Daí permite filtrar por solicitando dos pedidos.
+NOTA: este filtro pode ser feito somente no frontend se quiser
+
